que1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.16.1-alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - name: nginx-port
              containerPort: 8090
          volumeMounts:
            - name: html-files
              mountPath: /var/www
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: html-files
          configMap:
            name: html-files
            items:
              - key: content
                path: index.html
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: default.conf
                path: default.conf
