que1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scribetech-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: scribetech-nginx-svc
              servicePort: nginx-svc-port
